kubernetes/apps/default/misc-ingress/app/nas-ingress.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nas
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
