kubernetes/apps/default/misc-ingress/app/supermicro-ingress.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: supermicro
subsets:
  - addresses:
      - ip: ${SUPERMICRO_IP}
    ports:
      - name: http
        port: 80
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: supermicro
spec:
  ports:
    - name: http
      port: 80
  type: ClusterIP
