kubernetes/apps/default/misc-ingress/app/tdarr-ingress.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: tdarr
subsets:
  - addresses:
      - ip: ${NAS_IP}
    ports:
      - name: http
        port: 8265
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: tdarr
spec:
  ports:
    - name: http
      port: 8265
  type: ClusterIP
